--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "khmer-news",
-  "private": true,
+  "homepage": "https://Lyudommuny13.github.io/ldn-portfolio/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
