--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "khmer-news",
-  "homepage": "https://Lyudommuny13.github.io/ldn-portfolio/",
+  "homepage": "https://Lyudommuny13.github.io/NewsPortal/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
