--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^3.3.1",
     "dompurify": "^3.0.9",
     "framer-motion": "^11.0.3",
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.344.0",
     "marked": "^12.0.0",
     "react": "^18.3.1",
